--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <li><a href="./paginas/cv.html">CV</a></li>
                 <li><a href="./paginas/contacto.html">Contacto</a></li>
             </ul>
+            <span class="encabezado__icono">👨‍💻</span>
         </nav>
     </div>
     </header>
@@ -36,8 +37,5 @@
       </div>
       <!-- fin seccion cover -->
     </main>
-
-    
-
   </body>
 </html>
