--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -17,6 +17,7 @@
                     <li><a href="./habilidades.html">Habilidades</a></li>
                     <li><a href="./cv.html">CV</a></li>
                 </ul>
+                <span class="encabezado__icono">👨‍💻</span>
             </nav>
         </div>
         </header>
@@ -46,7 +47,7 @@
     <footer class="pie-pagina">
       <div class="pie-pagina__contenido">
           <section class="pie-pagina__dato"><a href="../index.html">Julio Gonzalez</a></section>
-          <section class="pie-pagina__dato">Todos los derechos reservados</section>
+          <section class="pie-pagina__dato__derechos">Todos los derechos reservados</section>
       </div>
   </footer>
   </body>
