--- a/paginas/cv.html
+++ b/paginas/cv.html
@@ -17,6 +17,7 @@
                     <li><a href="./habilidades.html">Habilidades</a></li>
                     <li><a href="./contacto.html">Contacto</a></li>
                 </ul>
+                <span class="encabezado__icono">👨‍💻</span>
             </nav>
         </div>
         </header>
@@ -63,7 +64,7 @@
         <footer class="pie-pagina">
             <div class="pie-pagina__contenido">
                 <section class="pie-pagina__dato"><a href="../index.html">Julio Gonzalez</a></section>
-                <section class="pie-pagina__dato">Todos los derechos reservados</section>
+                <section class="pie-pagina__dato__derechos">Todos los derechos reservados</section>
             </div>
         </footer>
 </body>
