--- a/paginas/cv.html
+++ b/paginas/cv.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV</title>
     <link rel="stylesheet" href="../style.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </head>
 <body class="proyectos__body">
     <!-- comienzo del header -->
@@ -17,7 +19,19 @@
                     <li><a href="./habilidades.html">Habilidades</a></li>
                     <li><a href="./contacto.html">Contacto</a></li>
                 </ul>
-                <span class="encabezado__icono">👨‍💻</span>
+                <li class="nav-item dropdown encabezado__responsive">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Menu
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="./sobremi.html" class="dropdown-item">Sobre mi</a></li>
+                        <li><a href="./habilidades.html" class="dropdown-item">Habilidades</a></li>
+                        <li><a href="./cv.html" class="dropdown-item">CV</a></li>
+                        <li><a href="./contacto.html" class="dropdown-item">Contacto</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="../index.html">Pagina principal</a></li>
+                    </ul>
+                  </li>
             </nav>
         </div>
         </header>
@@ -25,37 +39,43 @@
         <main>
         <!-- comienzo seccion proyectos -->
             <section class="proyectos">
-                <h1 class="proyectos__titulo-principal proyectos__titulo-principal">Proyectos</h1>
+                <h1 class="proyectos__titulo-principal">Proyectos</h1>
                 <div class="proyectos__contenido">
                     <!-- comienzo articulo 1  -->
+                    <div class="card-body">
                     <article class="proyecto">
                         <div class="proyecto__encabezado">
                             <img class="proyecto__encabezado-imagen" src="../media/imagenes/ecommerce.png" alt="Proyecto Ecommerce" width="360" height="215" />
                         </div>
-                        <h2 class="proyecto__titulo">Ecommerce</h2>
-                        <p class="proyecto__descripcion">Proyecto de Ecommerce realizado con React</p>
-                        <a href="" class="proyecto__enlace">Codigo</a>
+                        <h2 class="card-title">Ecommerce</h2>
+                        <p class="card-text mt-2">Proyecto de Ecommerce realizado con React</p>
+                        <a href="" class="btn btn-dark w-100">Codigo</a>
                     </article>
+                    </div>
                     <!-- fin articulo 1 -->
                     <!-- comienzo articulo 2  -->
+                    <div class="card-body">
                     <article class="proyecto">
                         <div class="proyecto__encabezado">
                             <img class="proyecto__encabezado-imagen" src="../media/imagenes/netflix.png" alt="Proyecto Netflix" width="360" height="215" />
                         </div>
-                        <h2 class="proyecto__titulo">Tipo Netflix</h2>
-                        <p class="proyecto__descripcion">Proyecto tipo Netflix realizado con SpringMVC</p>
-                        <a href="" class="proyecto__enlace">Codigo</a>
+                        <h2 class="card-title">Tipo Netflix</h2>
+                        <p class="card-text mt-2">Proyecto tipo Netflix realizado con SpringMVC</p>
+                        <a href="" class="btn btn-dark w-100">Codigo</a>
                     </article>
+                    </div>
                     <!-- fin articulo 2 -->
                     <!-- comienzo articulo 3  -->
+                    <div class="card-body">
                     <article class="proyecto">
                         <div class="proyecto__encabezado">
                             <img class="proyecto__encabezado-imagen" src="../media/imagenes/todo.png" alt="Curso de Desarrollo Web" width="360" height="215" />
                         </div>
-                        <h2 class="proyecto__titulo">ToDo</h2>
-                        <p class="proyecto__descripcion">TodoList realizado con HTML y Java</p>
-                        <a href="" class="proyecto__enlace">Codigo</a>
+                        <h2 class="card-title">ToDo</h2>
+                        <p class="card-text mt-2">TodoList realizado con HTML y Java</p>
+                        <a href="" class="btn btn-dark w-100">Codigo</a>
                     </article>
+                    </div>
                     <!-- fin articulo 3 -->
                 </div>
             </section>
