--- a/paginas/sobremi.html
+++ b/paginas/sobremi.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sobre Mi</title>
     <link rel="stylesheet" href="../style.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </head>
   <body class="sobremi__body">
     <!-- comienzo del header -->
@@ -17,7 +19,19 @@
             <li><a href="./cv.html">CV</a></li>
             <li><a href="./contacto.html">Contacto</a></li>
           </ul>
-          <span class="encabezado__icono">👨‍💻</span>
+          <li class="nav-item dropdown encabezado__responsive">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Menu
+            </a>
+            <ul class="dropdown-menu">
+              <li><a href="./sobremi.html" class="dropdown-item">Sobre mi</a></li>
+              <li><a href="./habilidades.html" class="dropdown-item">Habilidades</a></li>
+              <li><a href="./cv.html" class="dropdown-item">CV</a></li>
+              <li><a href="./contacto.html" class="dropdown-item">Contacto</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="../index.html">Pagina principal</a></li>
+            </ul>
+          </li>
         </nav>
       </div>
     </header>
@@ -32,7 +46,7 @@
           <p>
             Tengo 29 años y estoy buscando continuar mi carrera de
             Desarrollador. Actualmente estoy haciendo un curso en
-            <a href="https://www.coderhouse.com">CoderHouse</a> para expandir mi
+            <a class="link-primary" href="https://www.coderhouse.com">CoderHouse</a> para expandir mi
             conocimiento en el mundo del Desarrollo Web.
           </p>
           <p>
@@ -40,12 +54,12 @@
             seguir continuando mi carrera.
           </p>
           <p>
-            Si te interesa mi perfil, <a href="./contacto.html">contactame</a>
+            Si te interesa mi perfil, <a class="link-danger"  href="./contacto.html">contactame</a>
           </p>
         </div>
         <!-- fin sobremi info -->
         <!-- comienzo sobremi imagen -->
-        <div class="sobremi__dato sobremi__imagen"></div>
+        <div class="sobremi__dato sobremi__imagen img-fluid"></div>
         <!-- fin sobremi imagen -->
       </div>
       <!-- fin seccion sobremi -->
