mixing, include, extras

--- a/paginas/cv.html
+++ b/paginas/cv.html
@@ -47,7 +47,7 @@
                         <div class="proyecto__encabezado">
                             <img class="proyecto__encabezado-imagen" src="../media/imagenes/ecommerce.png" alt="Proyecto Ecommerce" width="360" height="215" />
                         </div>
-                        <h2 class="card-title">Ecommerce</h2>
+                        <h2 class="card-title mt-3">Ecommerce</h2>
                         <p class="card-text mt-2">Proyecto de Ecommerce realizado con React</p>
                         <a href="" class="btn btn-dark w-100">Codigo</a>
                     </article>
@@ -59,7 +59,7 @@
                         <div class="proyecto__encabezado">
                             <img class="proyecto__encabezado-imagen" src="../media/imagenes/netflix.png" alt="Proyecto Netflix" width="360" height="215" />
                         </div>
-                        <h2 class="card-title">Tipo Netflix</h2>
+                        <h2 class="card-title mt-3">Tipo Netflix</h2>
                         <p class="card-text mt-2">Proyecto tipo Netflix realizado con SpringMVC</p>
                         <a href="" class="btn btn-dark w-100">Codigo</a>
                     </article>
@@ -71,7 +71,7 @@
                         <div class="proyecto__encabezado">
                             <img class="proyecto__encabezado-imagen" src="../media/imagenes/todo.png" alt="Curso de Desarrollo Web" width="360" height="215" />
                         </div>
-                        <h2 class="card-title">ToDo</h2>
+                        <h2 class="card-title mt-3">ToDo</h2>
                         <p class="card-text mt-2">TodoList realizado con HTML y Java</p>
                         <a href="" class="btn btn-dark w-100">Codigo</a>
                     </article>
