--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portfolio</title>
+  <!--<meta name="keywords" content="portfolio, cv, habilidades, propuesta laboral, desarrollo, contacto" /> -->
+  <title>Portfolio Desarrollador Julio Gonzalez</title>
+  <meta name="description" content="Portfolio de desarrollador creado por Julio Gonzalez utilizando HTML y CSS para CoderHouse - ¡Contactame!">
   <link rel="stylesheet" href="./css/style.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
@@ -45,8 +47,8 @@
     <!-- fin video -->
     </video>
     <!-- comienzo info -->
-    <h1 class="cover__nombre">Julio Gonzalez</h1>
-    <h3 class="cover__ocupacion">Desarrollador</h3>
+    <h1 class="cover__nombre">Julio Gonzalez - Desarrollador</h1>
+    <h3 class="cover__ocupacion">Portfolio HTML - CSS </h3>
     <!-- fin info -->
     </div>
     <!-- fin seccion cover -->
