--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Contacto/ Propuesta Laboral</title>
+    <meta name="description" content="Seccion contacto y propuestas del Portfolio creado por Julio Gonzalez - ¡Contactame!">
     <link rel="stylesheet" href="../css/style.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
@@ -43,7 +44,7 @@
         <!-- comienzo form contacto -->
         <form class="contacto__form">
           <div class="mb-3">
-            <label for="exampleFormControlInput1" class="form-label contacto__text">Email address</label>
+            <label for="exampleFormControlInput1" class="form-label contacto__text">Nombre</label>
             <input type="email" class="form-control contacto__text-holder"  placeholder="Ingresa tu nombre">
           </div>
           <div class="mb-3">
@@ -56,7 +57,7 @@
           </div>
           <div class="mb-3">
             <label for="mensaje" class="form-label contacto__text">Mensaje</label>
-            <textarea class="form-control contacto__text-holder" rows="3"></textarea>
+            <textarea class="form-control contacto__text-holder" placeholder="¡Contactame!" rows="3"></textarea>
           </div>
           <button class="btn btn-primary"  type="submit" value="Enviar" >Enviar </button> 
         </form>
