--- a/paginas/cv.html
+++ b/paginas/cv.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV</title>
+    <title>CV/ Proyectos</title>
+    <meta name="description" content="Seccion cv con proyectos del Portfolio creado por Julio Gonzalez - ¡Contactame!">
     <link rel="stylesheet" href="../css/style.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
@@ -49,7 +50,7 @@
                         </div>
                         <h2 class="card-title mt-3">Ecommerce</h2>
                         <p class="card-text mt-2">Proyecto de Ecommerce realizado con React</p>
-                        <a href="" class="btn btn-dark w-100">Codigo</a>
+                        <a class="btn btn-dark w-100">Codigo</a>
                     </article>
                     </div>
                     <!-- fin articulo 1 -->
@@ -61,7 +62,7 @@
                         </div>
                         <h2 class="card-title mt-3">Tipo Netflix</h2>
                         <p class="card-text mt-2">Proyecto tipo Netflix realizado con SpringMVC</p>
-                        <a href="" class="btn btn-dark w-100">Codigo</a>
+                        <a class="btn btn-dark w-100">Codigo</a>
                     </article>
                     </div>
                     <!-- fin articulo 2 -->
@@ -72,8 +73,8 @@
                             <img class="proyecto__encabezado-imagen" src="../media/imagenes/todo.png" alt="Curso de Desarrollo Web" width="360" height="215" />
                         </div>
                         <h2 class="card-title mt-3">ToDo</h2>
-                        <p class="card-text mt-2">TodoList realizado con HTML y Java</p>
-                        <a href="" class="btn btn-dark w-100">Codigo</a>
+                        <p class="card-text mt-2">Proyecto TodoList realizado con HTML y Java</p>
+                        <a class="btn btn-dark w-100">Codigo</a>
                     </article>
                     </div>
                     <!-- fin articulo 3 -->
