--- a/paginas/habilidades.html
+++ b/paginas/habilidades.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Habilidades</title>
+    <title>Habilidades/ Conocimiento</title>
+    <meta name="description" content="Seccion habilidades con niveles de desarrollo del Portfolio creado por Julio Gonzalez - ¡Contactame!">
     <link rel="stylesheet" href="../css/style.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
@@ -47,7 +48,7 @@
         <div class="habilidades__contenido">
           <!-- comienzo habilidades front end -->
           <div class="habilidades__contenido-dato">
-            <h1 class="habilidades__contenido-titulo">Desarrollo Front End</h1>
+            <h3 class="habilidades__contenido-titulo">Desarrollo Front End</h1>
             <div class="habilidades__contenido-div">
               <article class="habilidades__contenido-articulo">
                 - React: <span class="habilidades__contenido-nivel">Nivel Intermedio</span> <img class="habilidades__encabezado-imagen" src="../media/imagenes/react.png" alt="Logo react" />
@@ -63,7 +64,7 @@
           <!-- fin habilidades front end -->
           <!-- comienzo habilidades back end -->
           <div class="habilidades__contenido-dato">
-            <h1 class="habilidades__contenido-titulo">Desarrollo Back End</h1>
+            <h3 class="habilidades__contenido-titulo">Desarrollo Back End</h1>
             <div class="habilidades__contenido-div">
             <article class="habilidades__contenido-articulo">
               - Java: <span class="habilidades__contenido-nivel">Nivel Avanzado</span><img class="habilidades__encabezado-imagen" src="../media/imagenes/java.png" alt="Logo Java" />
