--- a/paginas/sobremi.html
+++ b/paginas/sobremi.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sobre Mi</title>
+    <title>Sobre Mi/ Mi informacion</title>
+    <meta name="description" content="Seccion sobre mi e informacion del Portfolio creado por Julio Gonzalez - ¡Contactame!">
     <link rel="stylesheet" href="../css/style.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
@@ -47,11 +48,12 @@
             Tengo 29 años y estoy buscando continuar mi carrera de
             Desarrollador. Actualmente estoy haciendo un curso en
             <a class="link-primary" href="https://www.coderhouse.com">CoderHouse</a> para expandir mi
-            conocimiento en el mundo del Desarrollo Web.
+            conocimiento en el mundo del Desarrollo Web. Este portfolio fue creado por mi utilizando
+            HTML y CSS exclusivamente.
           </p>
           <p>
             Me considero una persona responsable, con muchas ganas de aprender y
-            seguir continuando mi carrera.
+            seguir continuando mi carrera. 
           </p>
           <p>
             Si te interesa mi perfil, <a class="link-danger"  href="./contacto.html">contactame</a>
