--- a/paginas/sobremi.html
+++ b/paginas/sobremi.html
@@ -3,11 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Seccion sobre mi e informacion del Portfolio creado por Julio Gonzalez - ¡Contactame!">
+    <meta
+      name="description"
+      content="Seccion sobre mi e informacion del Portfolio creado por Julio Gonzalez - ¡Contactame!"
+    />
     <title>Sobre Mi/ Mi informacion</title>
     <link rel="stylesheet" href="../css/style.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body class="sobremi__body">
     <!-- comienzo del header -->
@@ -21,16 +33,34 @@
             <li><a href="./contacto.html">Contacto</a></li>
           </ul>
           <li class="nav-item dropdown encabezado__responsive">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Menu
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              role="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >
+            Menú
             </a>
             <ul class="dropdown-menu">
-              <li><a href="./sobremi.html" class="dropdown-item">Sobre mi</a></li>
-              <li><a href="./habilidades.html" class="dropdown-item">Habilidades</a></li>
+              <li>
+                <a href="./sobremi.html" class="dropdown-item">Sobre mí</a>
+              </li>
+              <li>
+                <a href="./habilidades.html" class="dropdown-item"
+                  >Habilidades</a
+                >
+              </li>
               <li><a href="./cv.html" class="dropdown-item">CV</a></li>
-              <li><a href="./contacto.html" class="dropdown-item">Contacto</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="../index.html">Pagina principal</a></li>
+              <li>
+                <a href="./contacto.html" class="dropdown-item">Contacto</a>
+              </li>
+              <li><hr class="dropdown-divider" /></li>
+              <li>
+                <a class="dropdown-item" href="../index.html"
+                  >Pagina principal</a
+                >
+              </li>
             </ul>
           </li>
         </nav>
@@ -42,21 +72,24 @@
       <div class="sobremi">
         <!-- comienzo sobremi info -->
         <div class="sobremi__dato">
-          <h1 class="sobremi__dato-titulo">Sobre mi</h1>
+          <h1 class="sobremi__dato-titulo">Sobre mí</h1>
           <p>Hola! Soy Julio Gonzalez, Desarrollador Web.</p>
           <p>
             Tengo 29 años y estoy buscando continuar mi carrera de
             Desarrollador. Actualmente estoy haciendo un curso en
-            <a class="link-primary" href="https://www.coderhouse.com">CoderHouse</a> para expandir mi
-            conocimiento en el mundo del Desarrollo Web. Este portfolio fue creado por mi utilizando
-            HTML y CSS exclusivamente.
+            <a class="link-primary" href="https://www.coderhouse.com"
+              >CoderHouse</a
+            >
+            para expandir mi conocimiento en el mundo del Desarrollo Web. Este
+            portfolio fue creado por mi utilizando HTML y CSS exclusivamente.
           </p>
           <p>
             Me considero una persona responsable, con muchas ganas de aprender y
-            seguir continuando mi carrera. 
+            seguir continuando mi carrera.
           </p>
           <p>
-            Si te interesa mi perfil, <a class="link-danger"  href="./contacto.html">contactame</a>
+            Si te interesa mi perfil,
+            <a class="link-danger" href="./contacto.html">contactame</a>
           </p>
         </div>
         <!-- fin sobremi info -->
@@ -68,9 +101,13 @@
     </main>
     <footer class="pie-pagina">
       <div class="pie-pagina__contenido">
-          <section class="pie-pagina__dato"><a href="../index.html">Julio Gonzalez</a></section>
-          <section class="pie-pagina__dato__derechos">Todos los derechos reservados</section>
+        <section class="pie-pagina__dato">
+          <a href="../index.html">Julio Gonzalez</a>
+        </section>
+        <section class="pie-pagina__dato__derechos">
+          Todos los derechos reservados
+        </section>
       </div>
-  </footer>
+    </footer>
   </body>
 </html>
