--- a/index.html
+++ b/index.html
@@ -1,63 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <!--<meta name="keywords" content="portfolio, cv, habilidades, propuesta laboral, desarrollo, contacto" /> -->
-  <title>Portfolio Desarrollador Julio Gonzalez</title>
-  <meta name="description" content="Portfolio de desarrollador creado por Julio Gonzalez utilizando HTML y CSS para CoderHouse - ¡Contactame!">
-  <link rel="stylesheet" href="./css/style.css" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Portfolio de desarrollador creado por Julio Gonzalez utilizando HTML y CSS para CoderHouse - ¡Contactame!"
+    />
+    <!--<meta name="keywords" content="portfolio, cv, habilidades, propuesta laboral, desarrollo, contacto" /> -->
+    <title>Portfolio Desarrollador Julio Gonzalez</title>
+    <link rel="stylesheet" href="./css/style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-  <!-- comienzo del header -->
-  <header class="encabezado">
-  <div class="encabezado__contenido">
-    <nav>
-      <ul class="encabezado__contenido-menu">
-        <li><a href="./paginas/sobremi.html">Sobre mi</a></li>
-        <li><a href="./paginas/habilidades.html">Habilidades</a></li>
-        <li><a href="./paginas/cv.html">CV</a></li>
-        <li><a href="./paginas/contacto.html">Contacto</a></li>
-      </ul>
-      <li class="nav-item dropdown encabezado__responsive">
-        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-        Menu
-        </a>
-        <ul class="dropdown-menu">
-        <li><a href="./paginas/sobremi.html" class="dropdown-item">Sobre mi</a></li>
-        <li><a href="./paginas/habilidades.html" class="dropdown-item">Habilidades</a></li>
-        <li><a href="./paginas/cv.html" class="dropdown-item">CV</a></li>
-        <li><a href="./paginas/contacto.html" class="dropdown-item">Contacto</a></li>
-        <li><hr class="dropdown-divider"></li>
-        <li><a class="dropdown-item" href="./index.html">Pagina principal</a></li>
-        </ul>
-      </li>
-    </nav>
-  </div>
-  </header>
-  <!-- fin del header -->
-  <main>
-    <!-- comienzo seccion cover -->
-    <div class="cover">
-    <!-- comienzo video -->
-    <video class="background-video" autoplay loop muted>
-    <source src="./media/videos/production ID_4496268.mp4" type="video/mp4">
-    <!-- fin video -->
-    </video>
-    <!-- comienzo info -->
-    <h1 class="cover__nombre">Julio Gonzalez - Desarrollador</h1>
-    <h3 class="cover__ocupacion">Portfolio HTML - CSS </h3>
-    <!-- fin info -->
-    </div>
-    <!-- fin seccion cover -->
-  </main>
-  <footer class="pie-pagina">
-    <div class="pie-pagina__contenido">
-      <section class="pie-pagina__dato"><a href="../index.html">Julio Gonzalez</a></section>
-      <section class="pie-pagina__dato__derechos">Todos los derechos reservados</section>
-    </div>
-  </footer>
+    <!-- comienzo del header -->
+    <header class="encabezado">
+      <div class="encabezado__contenido">
+        <nav>
+          <ul class="encabezado__contenido-menu">
+            <li><a href="./paginas/sobremi.html">Sobre mí</a></li>
+            <li><a href="./paginas/habilidades.html">Habilidades</a></li>
+            <li><a href="./paginas/cv.html">CV</a></li>
+            <li><a href="./paginas/contacto.html">Contacto</a></li>
+          </ul>
+          <li class="nav-item dropdown encabezado__responsive">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              role="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >
+            Menú
+            </a>
+            <ul class="dropdown-menu">
+              <li>
+                <a href="./paginas/sobremi.html" class="dropdown-item"
+                  >Sobre mí</a
+                >
+              </li>
+              <li>
+                <a href="./paginas/habilidades.html" class="dropdown-item"
+                  >Habilidades</a
+                >
+              </li>
+              <li><a href="./paginas/cv.html" class="dropdown-item">CV</a></li>
+              <li>
+                <a href="./paginas/contacto.html" class="dropdown-item"
+                  >Contacto</a
+                >
+              </li>
+              <li><hr class="dropdown-divider" /></li>
+              <li>
+                <a class="dropdown-item" href="./index.html"
+                  >Pagina principal</a
+                >
+              </li>
+            </ul>
+          </li>
+        </nav>
+      </div>
+    </header>
+    <!-- fin del header -->
+    <main>
+      <!-- comienzo seccion cover -->
+      <div class="cover">
+        <!-- comienzo video -->
+        <video class="background-video" autoplay loop muted>
+          <source
+            src="./media/videos/production ID_4496268.mp4"
+            type="video/mp4"
+          />
+          <!-- fin video -->
+        </video>
+        <!-- comienzo info -->
+        <h1 class="cover__nombre">Julio Gonzalez - Desarrollador</h1>
+        <h3 class="cover__ocupacion">Portfolio HTML - CSS</h3>
+        <!-- fin info -->
+      </div>
+      <!-- fin seccion cover -->
+    </main>
+    <footer class="pie-pagina">
+      <div class="pie-pagina__contenido">
+        <section class="pie-pagina__dato">
+          <a href="../index.html">Julio Gonzalez</a>
+        </section>
+        <section class="pie-pagina__dato__derechos">
+          Todos los derechos reservados
+        </section>
+      </div>
+    </footer>
   </body>
 </html>
