--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -3,49 +3,87 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Seccion contacto y propuestas del Portfolio creado por Julio Gonzalez - ¡Contactame!"
+    />
     <title>Contacto/ Propuesta Laboral</title>
-    <meta name="description" content="Seccion contacto y propuestas del Portfolio creado por Julio Gonzalez - ¡Contactame!">
     <link rel="stylesheet" href="../css/style.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body class="contacto__body">
     <!-- comienzo del header -->
     <header class="encabezado">
-        <div class="encabezado__contenido">
-            <nav>
-                <ul class="encabezado__contenido-menu">
-                    <li><a href="../index.html">Pagina principal</a></li>
-                    <li><a href="./sobremi.html">Sobre mi</a></li>
-                    <li><a href="./habilidades.html">Habilidades</a></li>
-                    <li><a href="./cv.html">CV</a></li>
-                </ul>
-                <li class="nav-item dropdown encabezado__responsive">
-                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Menu
-                  </a>
-                  <ul class="dropdown-menu">
-                    <li><a href="./sobremi.html" class="dropdown-item">Sobre mi</a></li>
-                    <li><a href="./habilidades.html" class="dropdown-item">Habilidades</a></li>
-                    <li><a href="./cv.html" class="dropdown-item">CV</a></li>
-                    <li><a href="./contacto.html" class="dropdown-item">Contacto</a></li>
-                    <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="../index.html">Pagina principal</a></li>
-                  </ul>
-                </li>
-            </nav>
-        </div>
-        </header>
+      <div class="encabezado__contenido">
+        <nav>
+          <ul class="encabezado__contenido-menu">
+            <li><a href="../index.html">Pagina principal</a></li>
+            <li><a href="./sobremi.html">Sobre mí</a></li>
+            <li><a href="./habilidades.html">Habilidades</a></li>
+            <li><a href="./cv.html">CV</a></li>
+          </ul>
+          <li class="nav-item dropdown encabezado__responsive">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              role="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >
+            Menú
+            </a>
+            <ul class="dropdown-menu">
+              <li>
+                <a href="./sobremi.html" class="dropdown-item">Sobre mí</a>
+              </li>
+              <li>
+                <a href="./habilidades.html" class="dropdown-item"
+                  >Habilidades</a
+                >
+              </li>
+              <li><a href="./cv.html" class="dropdown-item">CV</a></li>
+              <li>
+                <a href="./contacto.html" class="dropdown-item">Contacto</a>
+              </li>
+              <li><hr class="dropdown-divider" /></li>
+              <li>
+                <a class="dropdown-item" href="../index.html"
+                  >Pagina principal</a
+                >
+              </li>
+            </ul>
+          </li>
+        </nav>
+      </div>
+    </header>
     <!-- fin del header -->
     <main>
-    <!-- comienzo seccion contacto   -->
+      <!-- comienzo seccion contacto   -->
       <div class="contacto">
         <div class="contacto__div"><h1>Contacto</h1></div>
         <!-- comienzo form contacto -->
         <form class="contacto__form">
           <div class="mb-3">
-            <label for="exampleFormControlInput1" class="form-label contacto__text">Nombre</label>
-            <input type="email" class="form-control contacto__text-holder"  placeholder="Ingresa tu nombre">
+            <label
+              for="exampleFormControlInput1"
+              class="form-label contacto__text"
+              >Nombre</label
+            >
+            <input
+              type="email"
+              class="form-control contacto__text-holder"
+              placeholder="Ingresa tu nombre"
+            />
           </div>
           <div class="mb-3">
             <label for="motivo" class="form-label contacto__text">Motivo</label>
@@ -56,10 +94,18 @@
             </select>
           </div>
           <div class="mb-3">
-            <label for="mensaje" class="form-label contacto__text">Mensaje</label>
-            <textarea class="form-control contacto__text-holder" placeholder="¡Contactame!" rows="3"></textarea>
+            <label for="mensaje" class="form-label contacto__text"
+              >Mensaje</label
+            >
+            <textarea
+              class="form-control contacto__text-holder"
+              placeholder="¡Contactame!"
+              rows="3"
+            ></textarea>
           </div>
-          <button class="btn btn-primary"  type="submit" value="Enviar" >Enviar </button> 
+          <button class="btn btn-primary" type="submit" value="Enviar">
+            Enviar
+          </button>
         </form>
         <!-- fin form contacto -->
       </div>
@@ -67,9 +113,13 @@
     </main>
     <footer class="pie-pagina">
       <div class="pie-pagina__contenido">
-          <section class="pie-pagina__dato"><a href="../index.html">Julio Gonzalez</a></section>
-          <section class="pie-pagina__dato__derechos">Todos los derechos reservados</section>
+        <section class="pie-pagina__dato">
+          <a href="../index.html">Julio Gonzalez</a>
+        </section>
+        <section class="pie-pagina__dato__derechos">
+          Todos los derechos reservados
+        </section>
       </div>
-  </footer>
+    </footer>
   </body>
 </html>
