--- a/paginas/cv.html
+++ b/paginas/cv.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV/ Proyectos</title>
     <meta name="description" content="Seccion cv con proyectos del Portfolio creado por Julio Gonzalez - ¡Contactame!">
+    <title>CV/ Proyectos</title>
     <link rel="stylesheet" href="../css/style.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
@@ -16,16 +16,16 @@
             <nav>
                 <ul class="encabezado__contenido-menu">
                     <li><a href="../index.html">Pagina principal</li>
-                    <li><a href="./sobremi.html">Sobre mi</a></li>
+                    <li><a href="./sobremi.html">Sobre mí</a></li>
                     <li><a href="./habilidades.html">Habilidades</a></li>
                     <li><a href="./contacto.html">Contacto</a></li>
                 </ul>
                 <li class="nav-item dropdown encabezado__responsive">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Menu
+                        Menú
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a href="./sobremi.html" class="dropdown-item">Sobre mi</a></li>
+                        <li><a href="./sobremi.html" class="dropdown-item">Sobre mí</a></li>
                         <li><a href="./habilidades.html" class="dropdown-item">Habilidades</a></li>
                         <li><a href="./cv.html" class="dropdown-item">CV</a></li>
                         <li><a href="./contacto.html" class="dropdown-item">Contacto</a></li>
@@ -50,7 +50,7 @@
                         </div>
                         <h2 class="card-title mt-3">Ecommerce</h2>
                         <p class="card-text mt-2">Proyecto de Ecommerce realizado con React</p>
-                        <a class="btn btn-dark w-100">Codigo</a>
+                        <a class="btn btn-dark w-100">Código</a>
                     </article>
                     </div>
                     <!-- fin articulo 1 -->
@@ -62,7 +62,7 @@
                         </div>
                         <h2 class="card-title mt-3">Tipo Netflix</h2>
                         <p class="card-text mt-2">Proyecto tipo Netflix realizado con SpringMVC</p>
-                        <a class="btn btn-dark w-100">Codigo</a>
+                        <a class="btn btn-dark w-100">Código</a>
                     </article>
                     </div>
                     <!-- fin articulo 2 -->
@@ -74,7 +74,7 @@
                         </div>
                         <h2 class="card-title mt-3">ToDo</h2>
                         <p class="card-text mt-2">Proyecto TodoList realizado con HTML y Java</p>
-                        <a class="btn btn-dark w-100">Codigo</a>
+                        <a class="btn btn-dark w-100">Código</a>
                     </article>
                     </div>
                     <!-- fin articulo 3 -->
