--- a/paginas/habilidades.html
+++ b/paginas/habilidades.html
@@ -3,11 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Seccion habilidades con niveles de desarrollo del Portfolio creado por Julio Gonzalez - ¡Contactame!"
+    />
     <title>Habilidades/ Conocimiento</title>
-    <meta name="description" content="Seccion habilidades con niveles de desarrollo del Portfolio creado por Julio Gonzalez - ¡Contactame!">
     <link rel="stylesheet" href="../css/style.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body class="habilidades__body">
     <!-- comienzo del header -->
@@ -16,21 +28,39 @@
         <nav>
           <ul class="encabezado__contenido-menu">
             <li><a href="../index.html">Pagina principal</a></li>
-            <li><a href="./sobremi.html">Sobre mi</a></li>
+            <li><a href="./sobremi.html">Sobre mí</a></li>
             <li><a href="./cv.html">CV</a></li>
             <li><a href="./contacto.html">Contacto</a></li>
           </ul>
           <li class="nav-item dropdown encabezado__responsive">
-            <a class="nav-link dropdown-toggle text_primary" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Menu
+            <a
+              class="nav-link dropdown-toggle text_primary"
+              href="#"
+              role="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >
+            Menú
             </a>
             <ul class="dropdown-menu">
-              <li><a href="./sobremi.html" class="dropdown-item">Sobre mi</a></li>
-              <li><a href="./habilidades.html" class="dropdown-item">Habilidades</a></li>
+              <li>
+                <a href="./sobremi.html" class="dropdown-item">Sobre mí</a>
+              </li>
+              <li>
+                <a href="./habilidades.html" class="dropdown-item"
+                  >Habilidades</a
+                >
+              </li>
               <li><a href="./cv.html" class="dropdown-item">CV</a></li>
-              <li><a href="./contacto.html" class="dropdown-item">Contacto</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="../index.html">Pagina principal</a></li>
+              <li>
+                <a href="./contacto.html" class="dropdown-item">Contacto</a>
+              </li>
+              <li><hr class="dropdown-divider" /></li>
+              <li>
+                <a class="dropdown-item" href="../index.html"
+                  >Pagina principal</a
+                >
+              </li>
             </ul>
           </li>
         </nav>
@@ -40,41 +70,78 @@
     <main>
       <!-- comienzo seccion habilidades -->
       <section class="habilidades">
-        <div >
-          <h1 class="habilidades__titulo">
-            Habilidades
-          </h1>
+        <div>
+          <h1 class="habilidades__titulo">Habilidades</h1>
         </div>
         <div class="habilidades__contenido">
           <!-- comienzo habilidades front end -->
           <div class="habilidades__contenido-dato">
-            <h3 class="habilidades__contenido-titulo">Desarrollo Front End</h1>
+            <h3 class="habilidades__contenido-titulo">Desarrollo Front End</h3>
             <div class="habilidades__contenido-div">
               <article class="habilidades__contenido-articulo">
-                - React: <span class="habilidades__contenido-nivel">Nivel Intermedio</span> <img class="habilidades__encabezado-imagen" src="../media/imagenes/react.png" alt="Logo react" />
+                - React:
+                <span class="habilidades__contenido-nivel"
+                  >Nivel Intermedio</span
+                >
+                <img
+                  class="habilidades__encabezado-imagen"
+                  src="../media/imagenes/react.png"
+                  alt="Logo react"
+                />
               </article>
               <article class="habilidades__contenido-articulo">
-                - JavaScript:<span class="habilidades__contenido-nivel">Nivel Avanzado</span><img class="habilidades__encabezado-imagen" src="../media/imagenes/js.png" alt="Logo JS" />
+                - JavaScript:<span class="habilidades__contenido-nivel"
+                  >Nivel Avanzado</span
+                ><img
+                  class="habilidades__encabezado-imagen"
+                  src="../media/imagenes/js.png"
+                  alt="Logo JS"
+                />
               </article>
               <article class="habilidades__contenido-articulo">
-                - HTML/ CSS:<span class="habilidades__contenido-nivel">Nivel Intermedio</span><img class="habilidades__encabezado-imagen" src="../media/imagenes/htmlcss.png" alt="Logo HTML/ CSS" />
+                - HTML/ CSS:<span class="habilidades__contenido-nivel"
+                  >Nivel Intermedio</span
+                ><img
+                  class="habilidades__encabezado-imagen"
+                  src="../media/imagenes/htmlcss.png"
+                  alt="Logo HTML/ CSS"
+                />
               </article>
-              </div>
+            </div>
           </div>
           <!-- fin habilidades front end -->
           <!-- comienzo habilidades back end -->
           <div class="habilidades__contenido-dato">
-            <h3 class="habilidades__contenido-titulo">Desarrollo Back End</h1>
+            <h3 class="habilidades__contenido-titulo">Desarrollo Back End</h3>
             <div class="habilidades__contenido-div">
-            <article class="habilidades__contenido-articulo">
-              - Java: <span class="habilidades__contenido-nivel">Nivel Avanzado</span><img class="habilidades__encabezado-imagen" src="../media/imagenes/java.png" alt="Logo Java" />
-            </article>
-            <article class="habilidades__contenido-articulo">
-              - SQL:<span class="habilidades__contenido-nivel">Nivel Avanzado</span> <img class="habilidades__encabezado-imagen" src="../media/imagenes/sql.png" alt="Logo SQL" />
-            </article>
-            <article class="habilidades__contenido-articulo">
-              - C++: <span class="habilidades__contenido-nivel">Nivel Inermedio</span><img class="habilidades__encabezado-imagen" src="../media/imagenes/c.png" alt="Logo C++" />
-            </article>
+              <article class="habilidades__contenido-articulo">
+                - Java:
+                <span class="habilidades__contenido-nivel">Nivel Avanzado</span
+                ><img
+                  class="habilidades__encabezado-imagen"
+                  src="../media/imagenes/java.png"
+                  alt="Logo Java"
+                />
+              </article>
+              <article class="habilidades__contenido-articulo">
+                - SQL:<span class="habilidades__contenido-nivel"
+                  >Nivel Avanzado</span
+                >
+                <img
+                  class="habilidades__encabezado-imagen"
+                  src="../media/imagenes/sql.png"
+                  alt="Logo SQL"
+                />
+              </article>
+              <article class="habilidades__contenido-articulo">
+                - C++:
+                <span class="habilidades__contenido-nivel">Nivel Inermedio</span
+                ><img
+                  class="habilidades__encabezado-imagen"
+                  src="../media/imagenes/c.png"
+                  alt="Logo C++"
+                />
+              </article>
             </div>
           </div>
           <!-- fin habilidades back end -->
@@ -84,9 +151,13 @@
     </main>
     <footer class="pie-pagina">
       <div class="pie-pagina__contenido">
-          <section class="pie-pagina__dato"><a href="../index.html">Julio Gonzalez</a></section>
-          <section class="pie-pagina__dato__derechos">Todos los derechos reservados</section>
+        <section class="pie-pagina__dato">
+          <a href="../index.html">Julio Gonzalez</a>
+        </section>
+        <section class="pie-pagina__dato__derechos">
+          Todos los derechos reservados
+        </section>
       </div>
-  </footer>
+    </footer>
   </body>
 </html>
