--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       name="description"
       content="Portfolio de desarrollador creado por Julio Gonzalez utilizando HTML y CSS para CoderHouse - ¡Contactame!"
     />
-    <!--<meta name="keywords" content="portfolio, cv, habilidades, propuesta laboral, desarrollo, contacto" /> -->
+    <meta name="keywords" content="portfolio, cv, habilidades, propuesta laboral, desarrollo, contacto" /> 
     <title>Portfolio Desarrollador Julio Gonzalez</title>
     <link rel="stylesheet" href="./css/style.css" />
     <link
@@ -84,8 +84,8 @@
           <!-- fin video -->
         </video>
         <!-- comienzo info -->
-        <h1 class="cover__nombre">Julio Gonzalez - Desarrollador</h1>
-        <h3 class="cover__ocupacion">Portfolio HTML - CSS</h3>
+        <h1 class="cover__nombre">Julio Gonzalez</h1>
+        <h3 class="cover__ocupacion">Desarrollador</h3>
         <!-- fin info -->
       </div>
       <!-- fin seccion cover -->
