--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -7,6 +7,7 @@
       name="description"
       content="Seccion contacto y propuestas del Portfolio creado por Julio Gonzalez - ¡Contactame!"
     />
+    <meta name="keywords" content="portfolio, cv, habilidades, propuesta laboral, desarrollo, contacto" /> 
     <title>Contacto/ Propuesta Laboral</title>
     <link rel="stylesheet" href="../css/style.css" />
     <link
