--- a/paginas/habilidades.html
+++ b/paginas/habilidades.html
@@ -7,6 +7,7 @@
       name="description"
       content="Seccion habilidades con niveles de desarrollo del Portfolio creado por Julio Gonzalez - ¡Contactame!"
     />
+    <meta name="keywords" content="portfolio, cv, habilidades, propuesta laboral, desarrollo, contacto" /> 
     <title>Habilidades/ Conocimiento</title>
     <link rel="stylesheet" href="../css/style.css" />
     <link
