--- a/paginas/sobremi.html
+++ b/paginas/sobremi.html
@@ -7,6 +7,7 @@
       name="description"
       content="Seccion sobre mi e informacion del Portfolio creado por Julio Gonzalez - ¡Contactame!"
     />
+    <meta name="keywords" content="portfolio, cv, habilidades, propuesta laboral, desarrollo, contacto" /> 
     <title>Sobre Mi/ Mi informacion</title>
     <link rel="stylesheet" href="../css/style.css" />
     <link
