--- a/paginas/habilidades.html
+++ b/paginas/habilidades.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+  <!-- inicio head -->
   <head>
+     <!-- inicio meta links -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
@@ -8,20 +10,12 @@
       content="Seccion habilidades con niveles de desarrollo del Portfolio creado por Julio Gonzalez - ¡Contactame!"
     />
     <meta name="keywords" content="portfolio, cv, habilidades, propuesta laboral, desarrollo, contacto" /> 
+    <!-- fin meta links -->
+    <!-- inicio titulo -->
     <title>Habilidades/ Conocimiento</title>
-    <link rel="stylesheet" href="../css/style.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-      crossorigin="anonymous"
-    ></script>
-  </head>
+    <!-- fin titulo -->
+</head>
+<!-- fin head -->
   <body class="habilidades__body">
     <!-- comienzo del header -->
     <header class="encabezado">
@@ -160,5 +154,19 @@
         </section>
       </div>
     </footer>
+    <!-- inicio links/ scripts css y bootstrap -->
+    <link rel="stylesheet" href="../css/style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
+   <!-- fin links/ scripts css y bootstrap -->
   </body>
 </html>
