--- a/paginas/cv.html
+++ b/paginas/cv.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- inicio head -->
 <head>
+     <!-- inicio meta links -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Seccion cv con proyectos del Portfolio creado por Julio Gonzalez - ¡Contactame!">
     <meta name="keywords" content="portfolio, cv, habilidades, propuesta laboral, desarrollo, contacto" /> 
+    <!-- fin meta links -->
+    <!-- inicio titulo -->
     <title>CV/ Proyectos</title>
-    <link rel="stylesheet" href="../css/style.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <!-- fin titulo -->
 </head>
+<!-- fin head -->
 <body class="proyectos__body">
     <!-- comienzo del header -->
     <header class="encabezado">
@@ -51,7 +54,7 @@
                         </div>
                         <h2 class="card-title mt-3">Ecommerce</h2>
                         <p class="card-text mt-2">Proyecto de Ecommerce realizado con React</p>
-                        <a class="btn btn-dark w-100">Código</a>
+                        <a class="btn btn-dark">Código</a>
                     </article>
                     </div>
                     <!-- fin articulo 1 -->
@@ -63,7 +66,7 @@
                         </div>
                         <h2 class="card-title mt-3">Tipo Netflix</h2>
                         <p class="card-text mt-2">Proyecto tipo Netflix realizado con SpringMVC</p>
-                        <a class="btn btn-dark w-100">Código</a>
+                        <a class="btn btn-dark">Código</a>
                     </article>
                     </div>
                     <!-- fin articulo 2 -->
@@ -75,7 +78,7 @@
                         </div>
                         <h2 class="card-title mt-3">ToDo</h2>
                         <p class="card-text mt-2">Proyecto TodoList realizado con HTML y Java</p>
-                        <a class="btn btn-dark w-100">Código</a>
+                        <a class="btn btn-dark">Código</a>
                     </article>
                     </div>
                     <!-- fin articulo 3 -->
@@ -89,5 +92,10 @@
                 <section class="pie-pagina__dato__derechos">Todos los derechos reservados</section>
             </div>
         </footer>
+    <!-- inicio links/ scripts css y bootstrap -->
+    <link rel="stylesheet" href="../css/style.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <!-- fin links/ scripts css y bootstrap -->
 </body>
 </html>
