--- a/paginas/cv.html
+++ b/paginas/cv.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <!-- inicio head -->
 <head>
      <!-- inicio meta links -->
@@ -74,7 +74,7 @@
                     <div class="card-body">
                     <article class="proyecto">
                         <div class="proyecto__encabezado">
-                            <img class="proyecto__encabezado-imagen" src="../media/imagenes/todo.png" alt="Curso de Desarrollo Web" width="360" height="215" />
+                            <img class="proyecto__encabezado-imagen" src="../media/imagenes/todo.png" alt="Proyecto Todo" width="360" height="215" />
                         </div>
                         <h2 class="card-title mt-3">ToDo</h2>
                         <p class="card-text mt-2">Proyecto TodoList realizado con HTML y Java</p>
