--- a/paginas/sobremi.html
+++ b/paginas/sobremi.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <!-- inicio head -->
   <head>
     <!-- inicio meta links -->
@@ -69,7 +69,7 @@
         <div class="sobremi__dato">
           <h1 class="sobremi__dato-titulo">Sobre mí</h1>
           <p>Hola! Soy Julio Gonzalez, Desarrollador Web.</p>
-          <p>
+          <p class="sobremi__dato-p1">
             Tengo 29 años y estoy buscando continuar mi carrera de
             Desarrollador. Actualmente estoy haciendo un curso en
             <a class="link-primary" href="https://www.coderhouse.com"
@@ -78,7 +78,7 @@
             para expandir mi conocimiento en el mundo del Desarrollo Web. Este
             portfolio fue creado por mi utilizando HTML y CSS exclusivamente.
           </p>
-          <p>
+          <p class="sobremi__dato-p2">
             Me considero una persona responsable, con muchas ganas de aprender y
             seguir continuando mi carrera.
           </p>
